@@ -12,7 +12,7 @@ htmlcommand(
 
 manpage(ecasound)
        (1)
-       (14.10.2001)
+       (18.10.2001)
        ()
        (Multimedia software)
 
@@ -120,7 +120,9 @@ size in sample frames). '-z:nodb' disables double-buffering.
 '-z:intbuf' and '-z:nointbuf' control whether extra internal buffering 
 is allowed for realtime devices. Disabling this can reduce 
 latency times in some situations. With '-z:xruns', processing will be 
-halted if an under/overrun occurs. '-z:psr' enables the em(precise-sample-rates) 
+halted if an under/overrun occurs. '-z:multitrack' and
+'z:nomultitrack' can be used to force ecasound to enable or disable
+multitrack-mode. '-z:psr' enables the em(precise-sample-rates) 
 mode for OSS-devices. See url(ecasoundrc(5))(ecasoundrc_manpage.html).
 
 enddit()
