@@ -177,7 +177,7 @@ void WAVEFILE::find_riff_datablock (void) throw(AUDIO_IO::SETUP_ERROR&) {
 }
 
 void WAVEFILE::read_riff_header (void) throw(AUDIO_IO::SETUP_ERROR&) {
-  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) read_riff_header()");
+  //  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) read_riff_header()");
    
   fio_repp->read_to_buffer(&riff_header_rep, sizeof(riff_header_rep));
 
@@ -189,7 +189,7 @@ void WAVEFILE::read_riff_header (void) throw(AUDIO_IO::SETUP_ERROR&) {
 }
 
 void WAVEFILE::write_riff_header (void) throw(AUDIO_IO::SETUP_ERROR&) {
-  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) write_riff_header()");
+  //  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) write_riff_header()");
 
   long int savetemp = fio_repp->get_file_position();
     
@@ -210,13 +210,13 @@ void WAVEFILE::write_riff_header (void) throw(AUDIO_IO::SETUP_ERROR&) {
   memcpy(temp, "Riff ID: ", 9);
   memcpy(&(temp[9]), riff_header_rep.id, 4);
   temp[13] = 0;
-  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) " + string(temp));
+  //  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) " + string(temp));
 
   ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) Wave data size " + 	kvu_numtostr(riff_header_rep.size));
   memcpy(temp, "Riff type: ", 11);
   memcpy(&(temp[11]), riff_header_rep.wname, 4);
   temp[15] = 0;
-  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) Riff type " + string(temp));
+  //  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) Riff type " + string(temp));
 
   //  fseek(fobject,save,SEEK_SET);
   fio_repp->set_file_position(savetemp);
@@ -224,7 +224,7 @@ void WAVEFILE::write_riff_header (void) throw(AUDIO_IO::SETUP_ERROR&) {
 
 void WAVEFILE::read_riff_fmt(void) throw(AUDIO_IO::SETUP_ERROR&)
 {
-  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) read_riff_fmt()");
+  //  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) read_riff_fmt()");
 
   long int savetemp = fio_repp->get_file_position();    
 
@@ -287,13 +287,13 @@ void WAVEFILE::write_riff_fmt(void)
 
   fio_repp->write_from_buffer(&fblock, sizeof(fblock));
   fio_repp->write_from_buffer(&riff_format_rep, sizeof(riff_format_rep));
-  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) Wrote RIFF format header.");
+  //  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) Wrote RIFF format header.");
 }
 
 void WAVEFILE::write_riff_datablock(void) {
   RB fblock;
 
-  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) write_riff_datablock()");
+  //  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) write_riff_datablock()");
     
   fio_repp->set_file_position_end();
 
@@ -341,11 +341,11 @@ signed long int WAVEFILE::find_block(const char* fblock) {
   unsigned long int offset;
   RB block;
 
-  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) find_block(): " + string(fblock,4));
+  //  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) find_block(): " + string(fblock,4));
     
   fio_repp->set_file_position(sizeof(riff_header_rep));
   while(next_riff_block(&block,&offset)) {
-    ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) found RIFF-block ");
+    //  ecadebug->msg(ECA_DEBUG::user_objects, "(audioio-wave) found RIFF-block ");
     if (memcmp(block.sig,fblock,4) == 0) {
       return(block.bsize);
     }
